# dandelion_sosp_ae

./: .gitignore  README.md  container.md  key.md  run-in-container.sh
client/: Cargo.toml
client/data/: dnd8won.qoi  flintlock.qoi
client/src/: closed_loop.rs  file_writing.rs  main.rs  open_loop.rs  rate_change.rs  registration.rs  request_type.rs
client/traces/: example1.csv  example2.csv  linear.csv
doe-suite-config/: pyproject.toml
doe-suite-config/designs/: dummy.yml  load_latency_matmul.yml  mixed_workload_sosp.yml
doe-suite-config/designs/design_vars/: general.yml
doe-suite-config/designs/filter_plugins/: helpers.py
doe-suite-config/does_etl_custom/etl/: cpu_efficiency_plots.py  general.py  helpers.py  misc_plots.py  paper_plots.py
doe-suite-config/does_etl_custom/scripts/: core_plot_nosweep.py  core_plot_sweep.py  latency_error_bar.py  latency_plot_sweep.py  mix_app_plot.py  pid_mixed_app_plot.py  plot_latency_box.py  plot_latency_over_time.py  sweep_error_rate.py
doe-suite-config/group_vars/all/: main.yml
doe-suite-config/inventory/: cloudlab.yml
doe-suite-config/roles/: cargo_build.yml
doe-suite-config/roles/setup-base/tasks/: cpu_freq.yml  main.yml
doe-suite-config/roles/setup-loader/tasks/: main.yml
doe-suite-config/roles/setup-worker/: proxy_template.j2
doe-suite-config/roles/setup-worker/tasks/: firecracker.yml  local_docker.yml  main.yml
doe-suite-config/super_etl/: SOSP_plots.yml
figure_10/: .gitignore  README.md  azure_150_memory.csv  committed_memory.py
figure_10/azure_100/: dirigent.csv  dirigent.json
http_storage/: Cargo.toml
http_storage/src/: main.rs
servers/: monitoring.py
servers/baremetal/: Cargo.toml  build.rs  run-standalone-middleware.py
servers/baremetal/src/: busy.c  compression.c  main.rs  matmul.c  middleware.rs
servers/dandelion/: busy_hybrid_mmu_x86_64  busy_libc_mmu_x86_64  middleware_app_hybrid_mmu_x86_64
servers/dandelion/middleware_app/: fan_out_mmu_x86_64  handle_mmu_x86_64  template_mmu_x86_64
servers/dandelion/middleware_app_nolibc/: fan_out_kvm_x86_64  fan_out_mmu_x86_64  handle_kvm_x86_64  handle_mmu_x86_64  template_kvm_x86_64  template_mmu_x86_64
servers/dandelion/middleware_app_pure/: fan_out_mmu_x86_64  handle_mmu_x86_64  template_mmu_x86_64
servers/dandelion/python_app/: logs_0_handle.py  logs_1_fanout.py  logs_2_render.py
servers/firecracker/frontend/: Cargo.toml
servers/firecracker/frontend/src/: main.rs  network.rs  util.rs  vm.rs
servers/firecracker/image/: openrc-service.sh  setup-alpine.sh
servers/hyperlight/: Cargo.toml  data_analysis.py  matmul.wasm
servers/hyperlight/src/: main.rs
servers/mock/: Cargo.toml  README.md
servers/mock/src/: main.rs
servers/wasmtime/: run.sh  spin.toml
servers/wasmtime/chainscaling/: Cargo.toml  build.rs  chainscaling.wasm
servers/wasmtime/chainscaling/src/: lib.rs
servers/wasmtime/check/: Cargo.toml  check.wasm
servers/wasmtime/check/src/: lib.rs
servers/wasmtime/compression/: Cargo.toml  build.rs  compression.wasm
servers/wasmtime/compression/src/: lib.rs
servers/wasmtime/matmul/: Cargo.toml  build.rs  matmul.wasm
servers/wasmtime/matmul/src/: lib.rs
servers/wasmtime/middleware/: Cargo.toml  middleware.wasm
servers/wasmtime/middleware/src/: lib.rs
