[package]
name = "http_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
hyper = {version = "1.2", features = ["full"]}
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
serde_json = {version = "1"}
log = {version = "0.4", features = ["release_max_level_warn"]}
env_logger = "0.11"
rand = {version = "0.8"}
chrono = {version = "0.4"}
clap = { version = "4", features = ["derive"] }