[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
cc= "1.0"

[features]
timestamp = []
register = ["dep:pnet"]
middleware = ["dep:futures", "dep:serde_json", "dep:lazy_static"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.29", optional = true }
hyper = { version = "1.2", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false }
core_affinity = "0.8"
getopts = "0.2"
http = "0.2"
http-body-util = "0.1.0-rc.3"
bytes = "1.4"
libc = "0.2"
serde = "1.0.197"
serde_bytes = "0.11"
serde_json = { version = "1", optional = true }
bson = "2.9.0"
pnet = { version = "0.34.0", optional = true }
lazy_static = { version = "1.4", optional = true }
