[package]
name = "hyperlight"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperlight-component-macro = { git = "https://github.com/hyperlight-dev/hyperlight", branch = "hyperlight-component-macro" }
hyperlight-host = { git = "https://github.com/hyperlight-dev/hyperlight", branch = "hyperlight-component-macro", default-features = false, features = [ "kvm" ] }
hyperlight-common = { git = "https://github.com/hyperlight-dev/hyperlight", branch = "hyperlight-component-macro" }
hyperlight-wasm = { git = "https://github.com/hyperlight-dev/hyperlight-wasm", branch = "hyperlight-component-macro" }
libc = "0.2.171"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
axum = "0.7.9"
tokio = { version = "1.36.0", features = ["full"] }
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "0.1"
futures = "0.3"
bson = "2.10.0"
serde_bytes = "0.11"
uuid = { version = "1.4", features = ["v4"] }
http-body-util = "0.1"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "hyperlight-wasm"
path = "src/main.rs"
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options