[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
http-body-util = "0.1"
hyper = { version = "1.2", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.16"
reqwest = { version = "0.12", default-features = false }
rustcracker = "1.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }