[package]
name = "chainscaling"
authors = ["Yazhuo Zhang <z.yazhuo@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc= "1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.1.0"
bson = "2.0"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
reqwest = { version = "0.12", default-features = false }

[workspace]
